test/e2e/fail_compile/type_errors/ct_required_runtime_block.cst
fn reserve(count: !runtime num) -> num {
    count
}

fn main() -> runtime num {
    reserve(runtime { 1 })
}
